--- a/ECE510_Hardware_Project/ECE510_Hardware_Project.runs/impl_1/usage_statistics_webtalk.html
+++ b/ECE510_Hardware_Project/ECE510_Hardware_Project.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Dec  7 22:23:44 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Dec  7 22:38:47 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>d0776011e66d49debcc2610dece5c32b</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>9</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>1e879876add758d082c09a376b704cf3</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>1e879876add758d082c09a376b704cf3</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>14</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>acae4aab839952589ffa303f77aa4ff7</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>acae4aab839952589ffa303f77aa4ff7</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-4600U CPU @ 2.10GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2694 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-8600K CPU @ 3.60GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3600 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Windows Server 2016 or Windows 10</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -33,16 +33,16 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_cancel=33</TD>
-   <TD>basedialog_ok=124</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=33</TD>
+   <TD>basedialog_cancel=38</TD>
+   <TD>basedialog_ok=134</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=41</TD>
    <TD>cmdmsgdialog_messages=1</TD>
    <TD>cmdmsgdialog_ok=19</TD>
    <TD>commandsinput_type_tcl_command_here=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=1</TD>
    <TD>createsrcfiledialog_file_name=9</TD>
-   <TD>filesetpanel_file_set_panel_tree=174</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=144</TD>
+   <TD>filesetpanel_file_set_panel_tree=188</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=159</TD>
 </TR><TR ALIGN='LEFT'>   <TD>fpgachooser_fpga_table=1</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_fit=25</TD>
@@ -64,22 +64,22 @@
    <TD>mainmenumgr_simulation_waveform=8</TD>
    <TD>mainmenumgr_tools=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_view=2</TD>
-   <TD>mainmenumgr_window=6</TD>
+   <TD>mainmenumgr_window=8</TD>
    <TD>maintoolbarmgr_open=1</TD>
    <TD>mainwinmenumgr_layout=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>messagewithoptiondialog_dont_show_this_dialog_again=3</TD>
    <TD>msgtreepanel_discard_user_created_messages=1</TD>
    <TD>msgtreepanel_message_severity=3</TD>
-   <TD>msgtreepanel_message_view_tree=93</TD>
+   <TD>msgtreepanel_message_view_tree=96</TD>
 </TR><TR ALIGN='LEFT'>   <TD>msgview_clear_messages_resulting_from_user_executed=1</TD>
-   <TD>numjobschooser_number_of_jobs=1</TD>
+   <TD>numjobschooser_number_of_jobs=2</TD>
    <TD>openrecenttarget_clear_list=1</TD>
    <TD>pacommandnames_add_sources=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=19</TD>
    <TD>pacommandnames_close_design=4</TD>
-   <TD>pacommandnames_fileset_window=2</TD>
+   <TD>pacommandnames_fileset_window=3</TD>
    <TD>pacommandnames_log_window=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_hardware_manager=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_hardware_manager=5</TD>
    <TD>pacommandnames_open_target_wizard=2</TD>
    <TD>pacommandnames_simulation_close=8</TD>
    <TD>pacommandnames_simulation_live_break=1</TD>
@@ -89,25 +89,25 @@
    <TD>pacommandnames_simulation_live_step=23</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run_behavioral=58</TD>
    <TD>pacommandnames_src_disable=10</TD>
-   <TD>pacommandnames_src_enable=11</TD>
+   <TD>pacommandnames_src_enable=12</TD>
    <TD>pacommandnames_toggle_view_nav=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_code=18</TD>
-   <TD>paviews_project_summary=34</TD>
+   <TD>paviews_project_summary=35</TD>
    <TD>paviews_schematic=1</TD>
    <TD>planaheadtab_show_flow_navigator=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_open_recently_opened_target=7</TD>
-   <TD>programdebugtab_open_target=6</TD>
-   <TD>programdebugtab_program_device=18</TD>
-   <TD>programfpgadialog_program=25</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_open_recently_opened_target=8</TD>
+   <TD>programdebugtab_open_target=7</TD>
+   <TD>programdebugtab_program_device=19</TD>
+   <TD>programfpgadialog_program=29</TD>
 </TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_specify_bitstream_file=1</TD>
    <TD>progressdialog_background=2</TD>
-   <TD>progressdialog_cancel=1</TD>
+   <TD>progressdialog_cancel=2</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
    <TD>projecttab_reload=2</TD>
    <TD>rdiviews_waveform_viewer=123</TD>
    <TD>rungadget_show_error=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=3</TD>
    <TD>simulationforcesettingsdialog_cancel_after_time_offset=3</TD>
    <TD>simulationforcesettingsdialog_force_value=27</TD>
    <TD>simulationforcesettingsdialog_leading_edge_value=33</TD>
@@ -125,7 +125,7 @@
    <TD>srcmenu_refresh_hierarchy=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>stalemoreaction_out_of_date_details=1</TD>
    <TD>stalerundialog_no=1</TD>
-   <TD>syntheticagettingstartedview_recent_projects=2</TD>
+   <TD>syntheticagettingstartedview_recent_projects=3</TD>
    <TD>syntheticastatemonitor_cancel=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=5</TD>
    <TD>touchpointsurveydialog_no=1</TD>
@@ -141,18 +141,18 @@
    <TD>closedesign=4</TD>
    <TD>createblockdesign=1</TD>
    <TD>editdelete=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>editpaste=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>editpaste=5</TD>
    <TD>launchopentarget=2</TD>
-   <TD>launchprogramfpga=24</TD>
+   <TD>launchprogramfpga=28</TD>
    <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=13</TD>
-   <TD>openrecenttarget=1</TD>
-   <TD>programdevice=10</TD>
-   <TD>runbitgen=37</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=17</TD>
+   <TD>openrecenttarget=2</TD>
+   <TD>programdevice=13</TD>
+   <TD>runbitgen=45</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runschematic=1</TD>
    <TD>savefileproxyhandler=1</TD>
-   <TD>setsourceenabled=22</TD>
-   <TD>showview=9</TD>
+   <TD>setsourceenabled=23</TD>
+   <TD>showview=11</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationbreak=1</TD>
    <TD>simulationclose=9</TD>
    <TD>simulationrestart=21</TD>
@@ -165,7 +165,7 @@
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=4</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=5</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -206,13 +206,13 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
     <TD>carry4=3</TD>
-    <TD>fdre=28</TD>
+    <TD>fdre=23</TD>
     <TD>gnd=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=1</TD>
-    <TD>lut1=3</TD>
-    <TD>lut2=8</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=6</TD>
     <TD>obuf=11</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcc=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=2</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -220,13 +220,13 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
     <TD>carry4=3</TD>
-    <TD>fdre=28</TD>
+    <TD>fdre=23</TD>
     <TD>gnd=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=1</TD>
-    <TD>lut1=3</TD>
-    <TD>lut2=8</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=6</TD>
     <TD>obuf=11</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcc=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=2</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -278,7 +278,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>timing-17=18</TD>
+<TR ALIGN='LEFT'>    <TD>timing-17=15</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -321,20 +321,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071770</TD>
+    <TD>devstatic=0.071751</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.033009</TD>
+    <TD>dynamic=0.024170</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.032126</TD>
+    <TD>i/o=0.023382</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.5 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000132</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000130</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -345,7 +345,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.104779</TD>
+    <TD>on-chip_power=0.095921</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -359,7 +359,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000276</TD>
+    <TD>signals=0.000184</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -376,21 +376,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.001175</TD>
+    <TD>vccaux_dynamic_current=0.000854</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012619</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.013794</TD>
+    <TD>vccaux_static_current=0.012618</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.013472</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000162</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.000947</TD>
-    <TD>vccint_static_current=0.009593</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010540</TD>
+    <TD>vccint_dynamic_current=0.000852</TD>
+    <TD>vccint_static_current=0.009577</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010429</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -412,9 +412,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.009075</TD>
+    <TD>vcco33_dynamic_current=0.006600</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.010075</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.007600</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2019.1</TD>
 </TR>   </TABLE>
@@ -531,13 +531,13 @@
     <TD>carry4_functional_category=CarryLogic</TD>
     <TD>carry4_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=29</TD>
+    <TD>fdre_used=26</TD>
     <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=3</TD>
+    <TD>lut1_used=2</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=8</TD>
+    <TD>lut2_used=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=11</TD>
 </TR>   </TABLE>
@@ -555,34 +555,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=6</TD>
-    <TD>lut_as_logic_util_percentage=0.03</TD>
+    <TD>lut_as_logic_used=5</TD>
+    <TD>lut_as_logic_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=29</TD>
-    <TD>register_as_flip_flop_util_percentage=0.07</TD>
+    <TD>register_as_flip_flop_used=26</TD>
+    <TD>register_as_flip_flop_util_percentage=0.06</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=6</TD>
-    <TD>slice_luts_util_percentage=0.03</TD>
+    <TD>slice_luts_used=5</TD>
+    <TD>slice_luts_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=29</TD>
-    <TD>slice_registers_util_percentage=0.07</TD>
+    <TD>slice_registers_used=26</TD>
+    <TD>slice_registers_util_percentage=0.06</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=6</TD>
-    <TD>lut_as_logic_util_percentage=0.03</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=5</TD>
+    <TD>lut_as_logic_util_percentage=0.02</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -590,35 +590,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=9</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=9</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=1</TD>
-    <TD>register_driven_from_outside_the_slice_used=10</TD>
-    <TD>register_driven_from_within_the_slice_fixed=10</TD>
-    <TD>register_driven_from_within_the_slice_used=19</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=8</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=8</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
+    <TD>register_driven_from_outside_the_slice_used=8</TD>
+    <TD>register_driven_from_within_the_slice_fixed=8</TD>
+    <TD>register_driven_from_within_the_slice_used=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=29</TD>
-    <TD>slice_registers_util_percentage=0.07</TD>
-    <TD>slice_used=7</TD>
-    <TD>slice_util_percentage=0.09</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=26</TD>
+    <TD>slice_registers_util_percentage=0.06</TD>
+    <TD>slice_used=5</TD>
+    <TD>slice_util_percentage=0.06</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
     <TD>slicel_used=4</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=3</TD>
+    <TD>slicem_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
     <TD>unique_control_sets_used=2</TD>
     <TD>unique_control_sets_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.02</TD>
-    <TD>using_o5_and_o6_used=5</TD>
-    <TD>using_o5_output_only_fixed=5</TD>
+    <TD>using_o5_and_o6_used=3</TD>
+    <TD>using_o5_output_only_fixed=3</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=1</TD>
+    <TD>using_o6_output_only_used=2</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -707,10 +707,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:42s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:22s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=591.648MB</TD>
-    <TD>memory_peak=882.652MB</TD>
+    <TD>memory_gain=585.258MB</TD>
+    <TD>memory_peak=882.168MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
